--- a/index.html
+++ b/index.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
-<!-- my first webpage! -->
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Step 1</title>
 </head>
 <body>
+    <h1> Step 1</h1>
     <p>This is Step 1</p>
+
+    <h2> Amazing information </h2>
+    <p>Isn't it amazing how this all works so
+        well and looks so
+        good on the screen.     Web browsers
+        are a really impressive technology!
+    </p>
+
+    <p>Suppose you want to indicate that x &lt; y &amp;
+        y &gt; z?
+        How would you do that?</p>
+
+<p> From here &nbsp; &nbsp;&nbsp;&nbsp; to here</p>
 </body>
 </html>
