Add Google Fonts link

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Step 1</title>
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 <body>
     <h1> Step 1</h1>
@@ -20,6 +22,8 @@
         y &gt; z?
         How would you do that?</p>
 
-<p> From here &nbsp; &nbsp;&nbsp;&nbsp; to here</p>
+    <p> From here &nbsp; &nbsp;&nbsp;&nbsp; to here</p>
+
+    <p><img src="cat1.jpg" width="300" height=""225></p>
 </body>
 </html>
